compiler/tests-spec/testData/psi/linked/constant-literals/real-literals/p-1/neg/3.2.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-draft
 * PLACE: constant-literals, real-literals -> paragraph 1 -> sentence 3
 * NUMBER: 2
 * DESCRIPTION: A float suffix in the real literals right after a several dots (possibly separated by digits).
 */

val value = 0..f
val value = 000..F
val value = 0.0.F
val value = 00.0.f
val value = 000.00.f
val value = 0000.1.f

val value = 0....F
val value = 1.1..f
val value = 2.2.3F
val value = 3.0.0.0.0.0.0f
val value = 4.00000.f
val value = 5.1.2.3.4.5.6.f
val value = 6..1..2...3..4..5f
val value = 7.8..9...0....1F
val value = 8.F

val value = 1......................................................................................................f
val value = 2....2.F
val value = 333............3f
val value = 4444..........4f
val value = 55555.......................................................................................................55555f
val value = 666666..............................................0.........................................................F
val value = 7777777.............................................0.........................................................F
val value = 88888888.9...0F
val value = 999999999.0..2.f

val value = 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000........f
val value = 99999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999.0.F
val value = 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222...0.1f
val value = 555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555123456785012345678501234567850123456785012345678501234567850.0.1F

val value = .0....f
val value = .1.1..f
val value = .2.2..3f
val value = .3.0.0.0.0.0.0f
val value = .4.00000.F
val value = .5.1.2.3.4.5.6.f
val value = .6..1..2.3.4..5F
val value = .7.8..9...0....1f
val value = .8.F
